--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>Khawer Saeed's Portal</title>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link rel="FaviconIcon" type="image/x-icon" href="favicon.ico">
 	<link rel="shortcut" type="image/x-icon" href="favicon.ico">
 	<meta name="viewport" content="width-device-width, initial-scale-1, shrink-to-fit-no">
@@ -10,7 +10,7 @@
 	<meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-<img src="banner.png" width="60%" alt="banner">
+<img src="images/banner.png" width="60%" alt="banner">
 <h1>Khawer Saeed's Portal</h1>
 <h2>About Me</h2>
 <p>I am a Junior Web Developer in Hyderabad Pakistan</p>
