--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>Khawer Saeed's Resume</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link rel="FaviconIcon" type="image/x-icon" href="favicon.ico">
 	<link rel="shortcut" type="image/x-icon" href="favicon.ico">
 	<meta name="viewport" content="width-device-width, initial-scale-1, shrink-to-fit-no">
@@ -15,7 +15,7 @@
 
 <body>
 <hr> 
-<img src="banner.png" width="50%" alt="banner">
+<img src="images/banner.png" width="50%" alt="banner">
 
 <h1>Khawer Saeed</h1>
 <h4>Junior Web Developer, Web Designer</h4>
